--- a/React/package.json
+++ b/React/package.json
@@ -19,8 +19,7 @@
     "redux": "^4.0.5",
     "styled-components": "^5.2.0",
     "styled-reset": "^4.2.3",
-    "typesafe-actions": "^5.1.0",
-    "typescript": "~3.7.2"
+    "typesafe-actions": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,5 +42,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/runtime": "^7.11.2",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-plugin-styled-components": "^1.11.1",
+    "typescript": "^4.0.3"
   }
 }
