--- a/React/package.json
+++ b/React/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.2.0",
     "styled-reset": "^4.2.3",
     "typesafe-actions": "^5.1.0"
