--- a/React/package.json
+++ b/React/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/styled-components": "^5.1.3",
+    "@types/ws": "^7.2.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
@@ -20,7 +21,8 @@
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.0",
     "styled-reset": "^4.2.3",
-    "typesafe-actions": "^5.1.0"
+    "typesafe-actions": "^5.1.0",
+    "ws": "^7.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
