--- a/React/package.json
+++ b/React/package.json
@@ -14,6 +14,7 @@
     "@types/styled-components": "^5.1.3",
     "@types/ws": "^7.2.7",
     "react": "^16.13.1",
+    "react-d3-tree": "^1.16.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
