--- a/React/package.json
+++ b/React/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/styled-components": "^5.1.3",
     "@types/ws": "^7.2.7",
+    "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "react-d3-tree": "^1.16.1",
     "react-dom": "^16.13.1",
@@ -23,10 +24,12 @@
     "styled-components": "^5.2.0",
     "styled-reset": "^4.2.3",
     "typesafe-actions": "^5.1.0",
-    "ws": "^7.3.1"
+    "ws": "^7.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all --parallel start:**",
+    "start:client": "react-scripts start",
+    "start:server": "nodemon server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -52,6 +55,7 @@
     "@babel/runtime": "^7.11.2",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-styled-components": "^1.11.1",
+    "nodemon": "^2.0.6",
     "typescript": "^4.0.3"
   }
 }
